[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Hazards/Enemies/slimo_walk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Slimo.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/Slimo_FSM.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Hazards/Enemies/slimo_slide.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 6 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "slide",
"speed": 20.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 109.225

[node name="Slimo" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 6
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 6.5 )
shape = SubResource( 1 )

[node name="Jumpbox" type="Area2D" parent="."]
collision_layer = 0
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2( 8, 4.5 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 8, 6.5 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 8, 7 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
frames = SubResource( 10 )
animation = "walk"
frame = 1
playing = true

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( 0, 13 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 16, 13 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="ProximityCheck" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityCheck"]
position = Vector2( 8, 7 )
shape = SubResource( 15 )

[node name="SlideWait" type="Timer" parent="."]
one_shot = true

[node name="SlideTween" type="Tween" parent="."]

[connection signal="body_entered" from="Jumpbox" to="." method="_on_Jumpbox_body_entered"]
[connection signal="body_exited" from="Jumpbox" to="." method="_on_Jumpbox_body_exited"]
[connection signal="body_entered" from="ProximityCheck" to="." method="_on_ProximityCheck_body_entered"]
[connection signal="body_entered" from="ProximityCheck" to="StateMachine" method="_on_ProximityCheck_body_entered"]
[connection signal="body_exited" from="ProximityCheck" to="StateMachine" method="_on_ProximityCheck_body_exited"]
[connection signal="timeout" from="SlideWait" to="." method="_on_SlideWait_timeout"]
[connection signal="tween_completed" from="SlideTween" to="." method="_on_SlideTween_tween_completed"]
